# mech-crate

./: .gitignore  Cargo.toml  Makefile  MechCrate-README.md  README.md  install.sh
assets/: unyform-logo-preview.html
crates/mx-cli/: Cargo.toml
crates/mx-cli/src/: main.rs
crates/mx-cli/src/commands/: add.rs  build.rs  cc_plugin.rs  dev.rs  docs.rs  doctor.rs  infra.rs  init.rs  mcp.rs  mod.rs  new.rs  recipes.rs  router.rs  self_update.rs  unyform.rs  upgrade.rs
crates/mx-cli/tests/: cli_tests.rs
crates/mx-lib/: Cargo.toml
crates/mx-lib/src/: config.rs  env.rs  error.rs  lib.rs  paths.rs  project.rs
crates/mx-lib/src/docker/: mod.rs
crates/mx-lib/src/infra/: config.rs  mod.rs
crates/mx-lib/src/mcp/: mod.rs
crates/mx-lib/src/recipe/: installer.rs  mod.rs  parser.rs
crates/mx-lib/src/router/: mod.rs
crates/mx-lib/src/template/: engine.rs  mod.rs
crates/mx-lib/src/unyform/: mod.rs
crates/mx-lib/src/upgrade/: mod.rs
crates/mx-mcp-server/: Cargo.toml
crates/mx-mcp-server/src/: main.rs
crates/mx-mcp-server/src/mcp/: mod.rs  protocol.rs  server.rs  transport.rs
crates/mx-mcp-server/src/mx/: mod.rs
crates/mx-mcp-server/src/rag/: mod.rs
crates/mx-mcp-server/src/tools/: mod.rs
crates/mx-mcp-server/src/unyform/: mod.rs
docs/: architecture-review-2026-03-07.md  cloudflare.md  docs-command.md  product-structure.md  router.md
docs/development/: APPLE_DESIGN_GUIDELINES.md  APPLE_DESIGN_QUICK_GUIDE.md  BUILD_DEPLOY_RECIPE.md  INDEX.md  INFRA_CONFIG.md  MX_QUICK_REFERENCE.md  MX_RUST_CLI_AND_MCP_SERVER.md  QUICK_REFERENCE.md  RECIPE_AUTHORING_GUIDE.md  RUST_CLI_DEVELOPMENT.md  SHELL_SCRIPTING_GUIDE.md  appendix-actor-model.md  appendix-algebraic-effects-optics.md  appendix-api-design.md  appendix-astro-scaffold.md  appendix-build-deploy-recipe.md  appendix-business-logic-placement.md  appendix-category-theory-php.md  appendix-category-theory-rust.md  appendix-category-theory-typescript.md  appendix-category-theory.md  appendix-concurrency-time.md  appendix-consensus.md  appendix-consistency-models.md  appendix-coordination-models.md  appendix-dataflow.md  appendix-emergence.md  appendix-file-structure-theory.md  appendix-formal-verification.md  appendix-frp-general.md  appendix-frp-js-ts.md  appendix-frp-php.md  appendix-frp-rust.md  appendix-fsm.md  appendix-groundbreaking-patterns.md  appendix-laravel.md  appendix-memory-models.md  appendix-novel-theories.md  appendix-pattern-playbook.md  appendix-process-calculi.md  (+16 more)
docs/superpowers/plans/: 2026-04-17-recipe-update-plan.md
docs/superpowers/specs/: 2026-04-17-recipe-update-design.md
docs/unyform/: ANALYTICS_DASHBOARD.md  CC_LOCAL_PLUGIN_DESIGN.md  COMPETITIVE_ANALYSIS.md  ENTERPRISE_INTEGRATION_CONTRACT.md  EXECUTIVE_SUMMARY.md  GTM_PLAYBOOK.md  MVP_PRD.md  PITCH_DECK.md  PRICING_STRATEGY.md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md  WHITEPAPER.md  docs.json  enterprise-ai-consistency-platform.md  unyform_logo_concept_u_equals_f.md
make/: docs.mk
mcp-server/: Cargo.toml  README.md  docker-compose.yml  install.sh
mcp-server/src/: error.rs  main.rs
mcp-server/src/project/: mod.rs
mcp-server/src/tools/: mod.rs
mcp-server/src/weaviate/: mod.rs
reference/mono/: Makefile
reference/mono/docker/: tree.md
reference/mono/docker/compose/: .env  arm64.yml  base.yml  campus-lms-dev.yml  campus-lms.yml  campus-queue-dev.yml  campus-queue.yml  campus-sqs-queue.yml  connect-dev.yml  connect.yml  deals-cms.yml  dev.yml  launchpad-api-dev.yml  launchpad-api.yml  launchpad-data.yml  launchpad-dev.yml  launchpad-funding.yml  launchpad-news.yml  launchpad-public-api-dev.yml  launchpad-public-api.yml  launchpad-research-dev.yml  launchpad-research.yml  launchpad-stack.yml  launchpad.yml  localstack.yml  maildev.yml  memcached.yml  mysql.yml  only-signals-dev.yml  only-signals.yml  postgres-connect.yml  postgres.yml  (+22 more)
reference/mono/make/: bounce.mk  common.mk  ecs.mk  init-stack.mk  up.mk
reference/mono/scripts/: .bashrc  add-app.sh  append.sh  apps.txt  bounce.sh  build.sh  bump-all-bloxt.sh  bump-core.sh  bump-package.sh  bump-packages.sh  bunify.sh  campus-logs.sh  clean-lpcore.sh  create-bunfig.sh  create-npmrc.sh  dev.sh  ec2-status.sh  ecs-tasks-status.sh  exec.sh  halt.sh  help.sh  import-data.sh  import-vector.sh  infra.txt  init-dockerfiles.sh  init-modules.sh  init-stack.sh  init.sh  inject.sh  latest.sh  libs.txt  list-panes.sh  mcp-test.sh  node-apps.txt  panel.sh  port.sh  ps.sh  psql.sh  rebase.sh  reboot.sh  (+18 more)
scripts/: install.sh
scripts/docs/: README.md  compile.ts  package-lock.json  package.json  template.latex  tsconfig.json
templates/: Makefile.template
templates/docker/compose/: app.dev.yml  app.yml  db.dev.yml  db.yml  nginx.yml  redis.yml  traefik.yml  worker.yml
templates/docker/config/: env.app  env.redis  env.secrets.template  env.shared
templates/infra/cloudflare/: README.md
templates/make/: build.mk  cloudflare.mk  common.mk  dev.mk  down.mk  logs.mk  release.mk  restart.mk  run.mk  sh.mk  start.mk  stop.mk  up.mk
templates/recipes/: README.md
templates/recipes/astro/: README.md  recipe.json
templates/recipes/laravel/: README.md  recipe.json
templates/recipes/nuxt/: README.md  recipe.json
templates/recipes/rust-api/: README.md  recipe.json
templates/recipes/rust-leptos/: README.md  recipe.json
templates/recipes/rust-worker/: README.md  recipe.json
templates/recipes/zola/: README.md  recipe.json
templates/router/: docker-compose.yml
templates/router/config/: traefik.yml
templates/scripts/: .bashrc  app-version.mjs  build.sh  cf-init-app.sh  cf-setup.sh  dev.sh  doctor.sh  down.sh  exec.sh  help.sh  init.sh  logs.sh  ps.sh  release-sync-versions.mjs  restart.sh  run.sh  sh.sh  simple-release.sh  start.sh  stop.sh  test.sh  up.sh
templates/scripts/md2pdf/: README.md  md2pdf.ts  package-lock.json  package.json  style.css  template.latex  tsconfig.json
tests/testbed/: larave.scaffold.smoketest.sh  rust-api.scaffold.smoketest.sh  scaffold-x.sh  testbed.sh
tests/testbed/lib/: assertions.sh  common.sh
tests/testbed/recipes/: laravel.test.sh
(+356 files in other folders)
