[workspace]
resolver = "2"
members = [
    "crates/mx-lib",
    "crates/mx-cli",
    "crates/mx-mcp-server",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["MechCrate Team"]
license = "MIT"
repository = "https://github.com/webmech/mech-crate"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Process execution
which = "7.0"

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Glob patterns
glob = "0.3"

# Directory walking
walkdir = "2.5"

# Environment variables
dotenvy = "0.15"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# CLI-specific
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Template engine
tera = "1.19"

# Home directory
dirs = "5.0"

# Regex
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
