[package]
name = "mx-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP Server for MechCrate - enabling LLMs to manage projects, services, and infrastructure"
authors = ["MechCrate Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/webmech/mech-crate"
keywords = ["mcp", "llm", "devops", "docker", "infrastructure"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MCP Protocol (JSON-RPC over stdio)
async-trait = "0.1"

# HTTP client for Weaviate
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Process execution
which = "7.0"

# UUID for request IDs
uuid = { version = "1.11", features = ["v4"] }

# Glob patterns for file matching
glob = "0.3"

# Directory walking
walkdir = "2.5"

# Environment variables
dotenvy = "0.15"

# CLI argument parsing (for standalone mode)
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mx-mcp"
path = "src/main.rs"

[[bin]]
name = "mx-ingest"
path = "src/bin/ingest.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
