[package]
name = "mx-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MechCrate shared library - project detection, recipe management, infrastructure configuration"
keywords = ["devops", "docker", "infrastructure", "scaffolding"]
categories = ["development-tools"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async traits
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["blocking"] }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Process execution
which = { workspace = true }

# UUID
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Glob patterns
glob = { workspace = true }

# Directory walking
walkdir = "2.5"

# Environment variables
dotenvy = { workspace = true }

# Template engine
tera = { workspace = true }

# Home directory
dirs = { workspace = true }

# Regex
regex = { workspace = true }

# Text diff
similar = "2.4"

# Interactive prompts (optional, for CLI use)
dialoguer = { workspace = true, optional = true }
console = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

[features]
default = []
cli = ["dialoguer", "console", "indicatif"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
